--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
             </div>
         </div>
     </div>
-
+    <div class="goods w">
+        <h3>精品推荐</h3>
+        <div class="goods-item">
+            | <a href="#">JQuery</a>
+            | <a href="#">Spark</a>
+            | <a href="#">MySQL</a>
+            | <a href="#">JavaWeb</a>
+            | <a href="#">MySQL</a>
+            | <a href="#">JavaWeb</a>
+        </div>
+    </div>
 </body>
 </html>
